# port-manager

./: .gitignore  Install.ps1  PortManager.bat  PortManager.ps1  PortManager.vbs  README.md  Uninstall.ps1  hello-ralphai.txt  index.html  package-lock.json  package.json  ports.json  ralphai.json
.github/workflows/: release.yml
PortManager/: .gitignore  tsconfig.json  vite.config.ts
PortManager/src/: App.svelte
PortManager/src-tauri/: tauri.conf.json
PortManager/src-tauri/src/: commands.rs  config.rs  main.rs  state.rs  status.rs
PortManager/src/lib/components/: ActionBar.svelte  ConnectionSettings.svelte  Header.svelte  PortList.svelte
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs  status.rs  tunnel.rs
src/lib/: types.ts
src/lib/components/: ActionBar.svelte  ConnectionSettings.svelte  Header.svelte  PortList.svelte  PortRow.svelte  ProfileSelector.svelte
src/lib/stores/: portManager.ts
